# Simple-File-Upload-Server

./: .gitignore  Cargo.toml  LICENCE  README.md
.github/workflows/: build.yml
src/: controllers.rs  error.rs  main.rs  middleware.rs  routes.rs
templates/: 404.html  base.html  file-display.html  upload.html
