[package]
name = "simple-file-upload-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.101"
askama = "0.15.4"
axum = { version = "0.8.8", features = ["multipart"] }
axum-embed = "0.1.0"
clap = { version = "4.5.58", features = ["derive"] }
colog = "1.4.0"
fs2 = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.29"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum_macros = "0.27.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
